--- a/2 Hitzdraht/3_1_Kalibrierung_Prandtl.ipynb
+++ b/2 Hitzdraht/3_1_Kalibrierung_Prandtl.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -141,25 +141,25 @@
      "text": [
       "\\begin{table}\n",
       "\\centering\n",
-      "\\caption{Betrieb der Düse mit der Spannung $U$ und die dazu korrespondierende Steigstrecke $x$ mit einem Ablesefehler von $\\Delta x = \\pm \\SI{0.5}{mm}$ mit der Schräg\\-einstellung $\\alpha$ des Schräg\\-rohr\\-mano\\-meters. Berechnung der Geschwindigkeit $v$ über Gl. (\\ref{eq:Prandlt_dyn_Druck}}\n",
+      "\\caption{Betrieb der Düse mit der Spannung $U$ und die dazu korrespondierende Steigstrecke $x$ mit einem Ablesefehler von $\\Delta x = \\pm \\SI{0.5}{mm}$ mit der Schräg\\-einstellung $\\alpha$ des Schräg\\-rohr\\-mano\\-meters. Berechnung der Geschwindigkeit $v$ über Gl. (\\ref{eq:Prandlt_dyn_Druck}).}\n",
       "\\label{tab:Kalibrierung_Prandtl_Rohr}\n",
       "\\begin{tabular}{rrrrr}\n",
       "\\toprule\n",
-      " $U / \\mathrm{V}$ &  $x / \\mathrm{mm}$ &  $\\alpha$ &  $v / \\mathrm{m/s}$ &  $\\Delta v / \\mathrm{m/s}$ \\\\\n",
+      " $U / \\mathrm{V}$ &  $x / \\mathrm{mm}$ &  $\\alpha$ &  $v / \\frac{m}{s}$ &  $\\Delta v / \\frac{m}{s}$ \\\\\n",
       "\\midrule\n",
-      "              0.3 &             0.0010 &      0.04 &               0.730 &                      0.180 \\\\\n",
-      "              0.6 &             0.0125 &      0.04 &               2.569 &                      0.051 \\\\\n",
-      "              1.5 &             0.0920 &      0.04 &               6.970 &                      0.019 \\\\\n",
-      "              2.0 &             0.1640 &      0.04 &               9.305 &                      0.014 \\\\\n",
-      "              2.0 &             0.0760 &      0.10 &              10.016 &                      0.033 \\\\\n",
-      "              2.5 &             0.1100 &      0.10 &              12.050 &                      0.027 \\\\\n",
-      "              3.0 &             0.1500 &      0.10 &              14.071 &                      0.023 \\\\\n",
-      "              3.0 &             0.0830 &      0.20 &              14.802 &                      0.045 \\\\\n",
-      "              3.7 &             0.1200 &      0.20 &              17.799 &                      0.037 \\\\\n",
-      "              4.3 &             0.1580 &      0.20 &              20.423 &                      0.032 \\\\\n",
-      "              4.3 &             0.0600 &      0.50 &              19.899 &                      0.083 \\\\\n",
-      "              5.0 &             0.0860 &      0.50 &              23.824 &                      0.069 \\\\\n",
-      "              5.5 &             0.1025 &      0.50 &              26.009 &                      0.063 \\\\\n",
+      "              0.3 &             0.0010 &      0.04 &              0.730 &                     0.180 \\\\\n",
+      "              0.6 &             0.0125 &      0.04 &              2.569 &                     0.051 \\\\\n",
+      "              1.5 &             0.0920 &      0.04 &              6.970 &                     0.019 \\\\\n",
+      "              2.0 &             0.1640 &      0.04 &              9.305 &                     0.014 \\\\\n",
+      "              2.0 &             0.0760 &      0.10 &             10.016 &                     0.033 \\\\\n",
+      "              2.5 &             0.1100 &      0.10 &             12.050 &                     0.027 \\\\\n",
+      "              3.0 &             0.1500 &      0.10 &             14.071 &                     0.023 \\\\\n",
+      "              3.0 &             0.0830 &      0.20 &             14.802 &                     0.045 \\\\\n",
+      "              3.7 &             0.1200 &      0.20 &             17.799 &                     0.037 \\\\\n",
+      "              4.3 &             0.1580 &      0.20 &             20.423 &                     0.032 \\\\\n",
+      "              4.3 &             0.0600 &      0.50 &             19.899 &                     0.083 \\\\\n",
+      "              5.0 &             0.0860 &      0.50 &             23.824 &                     0.069 \\\\\n",
+      "              5.5 &             0.1025 &      0.50 &             26.009 &                     0.063 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\\end{table}\n",
@@ -168,7 +168,7 @@
     }
    ],
    "source": [
-    "data_dict = {\"$U / \\mathrm{V}$\": U, \"$x / \\mathrm{mm}$\": x, \"$\\\\alpha$\": alpha, \"$v / \\mathrm{m/s}$\" : v, \"$\\Delta v / \\mathrm{m/s}$\": delta_v}\n",
+    "data_dict = {\"$U / \\mathrm{V}$\": U, \"$x / \\mathrm{mm}$\": x, \"$\\\\alpha$\": alpha, \"$v / \\\\frac{m}{s}$\" : v, \"$\\Delta v / \\\\frac{m}{s}$\": delta_v}\n",
     "df = pd.DataFrame(data = data_dict)\n",
     "# print(df.transpose().to_latex(header=False))\n",
     "caption = r\"Betrieb der Düse mit der Spannung $U$ und die dazu korrespondierende Steigstrecke $x$ mit einem Ablesefehler von $\\Delta x = \\pm \\SI{0.5}{mm}$ mit der Schräg\\-einstellung $\\alpha$ des Schräg\\-rohr\\-mano\\-meters. Berechnung der Geschwindigkeit $v$ über Gl. (\\ref{eq:Prandlt_dyn_Druck}).\"\n",
