--- a/4 Phasenübergänge/Modul1/Modul1.ipynb
+++ b/4 Phasenübergänge/Modul1/Modul1.ipynb
@@ -9,18 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'git'",
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/compphys/niad8730/Desktop/FPR/4 Phasenübergänge/localSettings.json'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\timom\\Desktop\\Alles\\Github\\FPR\\4 Phasenübergänge\\Modul1\\Modul1.ipynb Cell 2'\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/timom/Desktop/Alles/Github/FPR/4%20Phasen%C3%BCberg%C3%A4nge/Modul1/Modul1.ipynb#ch0000001?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mos\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpath\u001b[39;00m \u001b[39mimport\u001b[39;00m normpath, dirname\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/timom/Desktop/Alles/Github/FPR/4%20Phasen%C3%BCberg%C3%A4nge/Modul1/Modul1.ipynb#ch0000001?line=4'>5</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mjson\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/timom/Desktop/Alles/Github/FPR/4%20Phasen%C3%BCberg%C3%A4nge/Modul1/Modul1.ipynb#ch0000001?line=5'>6</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mgit\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/timom/Desktop/Alles/Github/FPR/4%20Phasen%C3%BCberg%C3%A4nge/Modul1/Modul1.ipynb#ch0000001?line=7'>8</a>\u001b[0m label_size \u001b[39m=\u001b[39m \u001b[39m20\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/timom/Desktop/Alles/Github/FPR/4%20Phasen%C3%BCberg%C3%A4nge/Modul1/Modul1.ipynb#ch0000001?line=8'>9</a>\u001b[0m plt\u001b[39m.\u001b[39mrcParams\u001b[39m.\u001b[39mupdate({\u001b[39m'\u001b[39m\u001b[39mfont.size\u001b[39m\u001b[39m'\u001b[39m: label_size, \u001b[39m'\u001b[39m\u001b[39mlegend.title_fontsize\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m18\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mlegend.fontsize\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m18\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39maxes.labelsize\u001b[39m\u001b[39m\"\u001b[39m: label_size, \u001b[39m\"\u001b[39m\u001b[39mxtick.labelsize\u001b[39m\u001b[39m\"\u001b[39m: label_size, \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/timom/Desktop/Alles/Github/FPR/4%20Phasen%C3%BCberg%C3%A4nge/Modul1/Modul1.ipynb#ch0000001?line=9'>10</a>\u001b[0m \u001b[39m\"\u001b[39m\u001b[39mytick.labelsize\u001b[39m\u001b[39m\"\u001b[39m: label_size, \u001b[39m\"\u001b[39m\u001b[39maxes.labelpad\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m4\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mlines.markersize\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m10\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mlines.linewidth\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m2\u001b[39m})\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'git'"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/compphys/niad8730/Desktop/FPR/4 Phasenübergänge/Modul1/Modul1.ipynb Cell 2'\u001b[0m in \u001b[0;36m<cell line: 17>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/compphys/niad8730/Desktop/FPR/4%20Phasen%C3%BCberg%C3%A4nge/Modul1/Modul1.ipynb#ch0000001?line=14'>15</a>\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39mdict\u001b[39m):\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/compphys/niad8730/Desktop/FPR/4%20Phasen%C3%BCberg%C3%A4nge/Modul1/Modul1.ipynb#ch0000001?line=15'>16</a>\u001b[0m         \u001b[39mvars\u001b[39m(\u001b[39mself\u001b[39m)\u001b[39m.\u001b[39mupdate(\u001b[39mdict\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/compphys/niad8730/Desktop/FPR/4%20Phasen%C3%BCberg%C3%A4nge/Modul1/Modul1.ipynb#ch0000001?line=16'>17</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(normpath(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mdirname(os\u001b[39m.\u001b[39mgetcwd())\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39m/localSettings.json\u001b[39m\u001b[39m'\u001b[39m),\u001b[39m'\u001b[39m\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f: path_data \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39mread()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/compphys/niad8730/Desktop/FPR/4%20Phasen%C3%BCberg%C3%A4nge/Modul1/Modul1.ipynb#ch0000001?line=17'>18</a>\u001b[0m paths \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mloads(path_data, object_hook\u001b[39m=\u001b[39mJSONObject)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/compphys/niad8730/Desktop/FPR/4%20Phasen%C3%BCberg%C3%A4nge/Modul1/Modul1.ipynb#ch0000001?line=19'>20</a>\u001b[0m \u001b[39m# Headers start with #. So read this line and give the <header> vector to pd.read_csv(names=header)\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/compphys/niad8730/Desktop/FPR/4 Phasenübergänge/localSettings.json'"
      ]
     }
    ],
@@ -54,25 +54,21 @@
     "                break #stop when there are no more #\n",
     "\n",
     "        header = header[1:].strip().split()\n",
-    "    return header\n"
+    "    return header\n",
+    "    \n",
+    "# /bin/python3 -m pip install ipykernel -U --user --force-reinstall\n",
+    "# /bin/python3.6 -m pip install numpy -U --user \n",
+    "# in case this might help someone else, for me a workaround was to download the package from anaconda and install it with '--use-local'\n",
+    "# conda install -n myEnv --use-local myPackageFromAnaconda.tar.bz2\n",
+    "# https://github.com/conda/conda/issues/7245\n",
+    "# little disclaimer - any subsequent installation was screwed by the package"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'c:\\\\Users\\\\timom\\\\Desktop\\\\Alles\\\\Github\\\\FPR\\\\4 Phasenübergänge'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "os.path.dirname(os.getcwd())"
    ]
@@ -162,11 +158,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "7db2da5eb08647b1b7dc53a5fea357893fbbf1fcc11954708d5e728aa4cd53bc"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit",
+   "display_name": "Python 3.9.12",
    "language": "python",
    "name": "python3"
   },
@@ -180,9 +173,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "70b739dc1fc7ca3d39b955ec51bee7b2e81280dbdb74d23fa8122a45985dcba0"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
